language/move-lang/tests/move_check/parser/spec_parsing_lambda_fail.exp
error: 

   ┌── tests/move_check/parser/spec_parsing_lambda_fail.move:3:15 ───
   │
 3 │       let _ = |y| x + y;
   │               ^^^^^^^^^ `|_| _` lambda expression only allowed in specifications
   │

